feature/PN-5494: renamed SEND_SIMPLE_REGISTERED_LETTER_PROGRESS in SIMPLE_REGISTERED_LETTER_PROGRESS, requestId in prepareRequestId, getSendRequestId in getSendRequestIdByPrepareRequestId and filterByCategory in filterSendByPrepareRequestId
