# src/main/java/it/pagopa/pn/deliverypush/dto/timeline/details/TimelineElementCategoryInt.java
@@ -39,7 +39,7 @@ public enum TimelineElementCategoryInt {
     AAR_CREATION_REQUEST(AarCreationRequestDetailsInt.class, TimelineElementCategory.AAR_CREATION_REQUEST.getValue()),
     AAR_GENERATION(AarGenerationDetailsInt.class, TimelineElementCategory.AAR_GENERATION.getValue()),
     NOT_HANDLED(NotHandledDetailsInt.class, TimelineElementCategory.NOT_HANDLED.getValue()),
-    SEND_SIMPLE_REGISTERED_LETTER_PROGRESS(SimpleRegisteredLetterProgressDetailsInt.class, TimelineElementCategory.SEND_SIMPLE_REGISTERED_LETTER_PROGRESS.getValue());
+    SIMPLE_REGISTERED_LETTER_PROGRESS(SimpleRegisteredLetterProgressDetailsInt.class, TimelineElementCategory.SIMPLE_REGISTERED_LETTER_PROGRESS.getValue());
     
     private final Class<? extends TimelineElementDetailsInt> detailsJavaClass;
     private final String value;
